--- a/exe3/exe3.html
+++ b/exe3/exe3.html
@@ -8,33 +8,77 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <div id="title">Hi everyone, My Name is May Karam</div>
-      <div id="sub-title">I am a Web Developer</div>
-    </div>
-
-    <img src="./images/myPic.jpeg" alt="my picture" />
-    <div>
+    <main>
+      <section>
+        <h3 id="title">Hi everyone, My Name is May Karam</h3>
+        <h5 id="sub-title">I am a Web Developer</h5>
+      </section>
+      <section>
+        <img src="./images/myPic.jpeg" alt="my picture" />
+      </section>
+    </main>
+    <aside>
       <p>
-        <span class="points">Coding </span> means everything to me. I can't
-        imagine my future without being in a huge
-        <span class="points"> high-tech</span> company.
+        <em>Coding </em> means everything to me. I can't imagine my future
+        without being in a huge <em> high-tech</em> company.
         <img src="./images/developer.png" class="icon-pic" />
-        <br />
         I have started learning by myself since I finished college, I have
-        learnt<span class="points"> Python</span> computer language.
+        learnt<em> Python</em> computer language.
         <img src="./images/python-icon.png" class="icon-pic" />
-        <br />
-        <span
-          >and also I have built some <span class="points"> websites</span>,
-          simply ones. <br />
-          like:</span
-        >
-        <a href="https://mayoush89k.github.io/smartHouse/">Smart House</a>
-        <a href="https://mayoush89k.github.io/world-wikipedia/"
-          >World-wikipedia</a
-        >
       </p>
+      <ul>
+        and also I have built some
+        <em>websites</em
+        >, simply ones. like:
+        <li>
+          <a href="https://mayoush89k.github.io/smartHouse/">Smart House</a>
+        </li>
+        <li>
+          <a href="https://mayoush89k.github.io/world-wikipedia/"
+            >World-wikipedia</a
+          >
+        </li>
+      </ul>
+    </aside>
+    <aside>
+      I like watching <em>Movies</em> like:
+      <section class="card">
+        <img
+          src="https://resizing.flixster.com/_GrCbFNcz21ZlOhK0rGPoz2Zis8=/206x305/v2/https://flxt.tmsimg.com/assets/p13937884_p_v8_ab.jpg"
+          alt="Venom photo"
+        />
+        <h2 class="movieName">Venom</h2>
+        <ul>
+          Cast
+          <li>Tom Hardy</li>
+        </ul>
+      </section>
+
+      <section class="card">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/4/45/Sonic_the_Hedgehog_film_poster.jpg"
+          alt="Sonic the Hedgehog photo"
+        />
+        <h2 class="movieName">Sonic the Hedgehog</h2>
+        <ul>
+          Cast
+          <li>Jim Carrey</li>
+        </ul>
+      </section>
+      <section class="card">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/en/5/5d/White_House_Down_poster_with_billing_block.jpg"
+          alt="Fast Five photo"
+        />
+        <h3 class="movieName">White House Down</h3>
+        <ul>
+          Cast
+          <li>Channing Tatum</li>
+          <li>Jamie Foxx</li>
+        </ul>
+      </section>
+    </aside>
+    <aside>
       <ul>
         Follow me
         <li>
@@ -61,6 +105,6 @@
           /></a>
         </li>
       </ul>
-    </div>
+    </aside>
   </body>
 </html>
