6_2 refactor first website

--- a/exe6_2/index.html
+++ b/exe6_2/index.html
@@ -26,19 +26,21 @@
         learnt<em> Python</em> computer language.
         <img src="./images/python-icon.png" class="icon-pic" />
       </p>
-      <ul>
-        and also I have built some
-        <em>websites</em
-        >, simply ones. like:
-        <li>
-          <a href="https://mayoush89k.github.io/smartHouse/">Smart House</a>
-        </li>
-        <li>
-          <a href="https://mayoush89k.github.io/world-wikipedia/"
-            >World-wikipedia</a
-          >
-        </li>
-      </ul>
+      <section>
+        <ul>
+          and also I have built some
+          <em>websites</em
+          >, simply ones. like:
+          <li>
+            <a href="https://mayoush89k.github.io/smartHouse/">Smart House</a>
+          </li>
+          <li>
+            <a href="https://mayoush89k.github.io/world-wikipedia/"
+              >World-wikipedia</a
+            >
+          </li>
+        </ul>
+      </section>
     </aside>
     <aside>
       <section>I like watching <em>Movies</em> like:</section>
