--- a/exe12-2/index.html
+++ b/exe12-2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12 - 3 Pseudo Box Color</title>
+    <title>12 - 3 Pseudo Box Color Animator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
