fixing hotel - website contact us page

--- a/MayKHotel/about.html
+++ b/MayKHotel/about.html
@@ -20,8 +20,8 @@
       <a href="pages.html">Pages</a>
       <a href="contact.html">Contact us</a>
       <a href="about.html" class="current">About us</a>
-      <a href="search.html" id="search"
-        ><img src="search.png" alt="search"
+      <a href="search.html" 
+        ><img src="search.png" alt="search" id="search"
       /></a>
     </section>
   </nav>
