--- a/MayKHotel/homepage.html
+++ b/MayKHotel/homepage.html
@@ -18,8 +18,8 @@
         <a href="pages.html">Pages</a>
         <a href="contact.html">Contact us</a>
         <a href="about.html">About us</a>
-        <a href="search.html" id="search"
-          ><img src="search.png" alt="search"
+        <a href="search.html"
+          ><img src="search.png" alt="search" id="search"
         /></a>
       </section>
     </nav>
