--- a/MayKHotel/contact.html
+++ b/MayKHotel/contact.html
@@ -29,9 +29,8 @@
         <a href="pages.html">Pages</a>
         <a href="contact.html" class="current">Contact us</a>
         <a href="about.html">About us</a>
-        <a href="search.html" 
-          ><img src="search.png" alt="search" id="search"
-        /></a>
+        <img src="search.png" alt="search" id="search"
+        />
       </section>
     </nav>
 
