--- a/exe13-2/index.html
+++ b/exe13-2/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
     <!-- 7.2 new Lines-->
     <nav class="navigationBar">
       <section class="navSection">Home</section>
@@ -91,18 +90,28 @@
         </ul>
       </section>
       <!-- 7.2 new Lines-->
-      <section >
-        <a class="links" href="https://www.imdb.com/title/tt1270797/?ref_=hm_rvi_tt_i_1">
+      <section>
+        <a
+          class="links"
+          href="https://www.imdb.com/title/tt1270797/?ref_=hm_rvi_tt_i_1"
+        >
           <button>Link To IMDB</button>
         </a>
-        <a class="links" href="https://www.imdb.com/title/tt3794354/?ref_=hm_rvi_tt_i_2">
+        <a
+          class="links"
+          href="https://www.imdb.com/title/tt3794354/?ref_=hm_rvi_tt_i_2"
+        >
           <button>Link To IMDB</button>
         </a>
-        <a class="links" href="https://www.imdb.com/title/tt2334879/?ref_=hm_rvi_tt_i_4">
+        <a
+          class="links"
+          href="https://www.imdb.com/title/tt2334879/?ref_=hm_rvi_tt_i_4"
+        >
           <button>Link To IMDB</button>
         </a>
       </section>
     </aside>
+
     <footer>
       <ul>
         Follow me
