--- a/exe13-2/index.html
+++ b/exe13-2/index.html
@@ -80,7 +80,7 @@
       <section class="card">
         <img
           src="https://upload.wikimedia.org/wikipedia/en/5/5d/White_House_Down_poster_with_billing_block.jpg"
-          alt="Fast Five photo"
+          alt="White House Down photo"
         />
         <h3 class="movieName">White House Down</h3>
         <ul>
